Se implementa el controlador de registro, junto a la lógica necesaria para la creación de un usuario en base de datos. Se regeneran las clases del modelo del dominio para que coincidan con las entidades jpa